[tool.poetry]
package-mode = false
name = "catboost-inference-exp-service"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mypy = "^1.11.0"
pre-commit = "^3.7.1"
ruff = "^0.5.4"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".dvc",
    ".eggs",
    ".env",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "env",
    "node_modules",
    "site-packages",
    "venv"
] # recommended list

# Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
# All paths are relative to the project root, which is the directory containing the pyproject.toml.
src = ["src"]

line-length = 120
target-version = "py310" # python version
respect-gitignore = true # avoid gitignore files

[tool.ruff.lint]
exclude = ["*.ipynb"] # don't use linters for notebooks, only formatter

# Pyflakes - F, pycodestyle - E, W (all from flake8)
# flake8-builtins - A
# Pylint - PL
# isort - I
# flake8-simplify SIM
# could add 'D' - for docstring lintering, if necessary
select = ["B", "C", "E", "F", "W", "A", "PL", "I", "Q", "SIM"] 

# PLR0913 - too many arguments in function definition (5 by default)
# recommended to ignore in docs:
# tab-indentation (W191)
# indentation-with-invalid-multiple (E111)
# indentation-with-invalid-multiple-comment (E114)
# over-indented (E117)
# indent-with-spaces (D206)
# triple-single-quotes (D300)
ignore = ['PLR0913', 'W191', 'E111', 'E114', 'E117', 'D206', 'D300']

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party",  "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false # Like Black
line-ending = "auto" # Like Black
docstring-code-format = true # format docstring or not
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true
